agency-v1/infrastructure/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legacymark
  labels:
    app.kubernetes.io/managed-by: kustomize
    environment: production
    istio-injection: enabled
